--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -19,6 +19,10 @@
     margin-bottom: 0;
     margin-right: 25px;
   }
+  .navbar-brand img {
+    width: 260px;
+	height: 42px;
+  }
 }
 
 /*-----------------------------------
@@ -26,7 +30,8 @@
 ------------------------------------*/
 @media (min-width: 768px) {
   .navbar-brand img {
-    width: 100px;
+    width: 260px;
+	height: 42px;
   }
   .navbar-expand-md .navbar-nav .nav-link {
     padding: 8px 10px;
