--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1,6 +1,13 @@
 /*-----------------------------------
     Small devices (landscape phones, 576px and up)
 ------------------------------------*/
+@media (min-width: 420px) {
+  .navbar-brand img {
+    width: 300px;
+	height: 50px;
+  }
+}
+
 @media (min-width: 576px) {
   .top-header {
     padding: 25px 0 15px;
