--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -2,7 +2,41 @@
     Small devices (landscape phones, 576px and up)
 ------------------------------------*/
 @media (min-width: 420px) {
- 
+  .navbar-brand img {
+    width: 260px;
+	height: 50px;
+	display: inline;
+	position: relative;
+  }
+  
+   .hero .slide-content p {
+    padding-right: 50px;
+	display: inline-block;
+	position: relative;
+  }
+  
+  .hero .slide-content h1 {
+    margin: 100px 0 50px 0;
+  }
+}
+
+@media (max-width: 420px) {
+  .navbar-brand img {
+    width: 260px;
+	height: 50px;
+	display: inline;
+	position: relative;
+  }
+  
+   .hero .slide-content p {
+    padding-right: 50px;
+	display: inline-block;
+	position: relative;
+  }
+  
+  .hero .slide-content h1 {
+    margin: 100px 0 50px 0;
+  }
 }
 
 @media (min-width: 576px) {
