--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -220,7 +220,7 @@
   position: absolute;
   bottom: 0;
   left: 0;
-  padding: 15px 50px 0 15px;
+  padding: 20px 0px 0 15px;
   background-color: #fff;
 }
 }
@@ -273,7 +273,7 @@
   position: absolute;
   bottom: 0;
   left: 0;
-  padding: 25px 25px 0 25px;
+  padding: 20px 20px 0 0;
   background-color: #fff;
 }
 
