--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,30 +25,30 @@
     1 - Header
 ------------------------------------*/
 /*-- bottom-to-top --*/
-#toTop {
-	display: none;
-	text-decoration: none;
-	position: fixed;
-	bottom: 24px;
-	right: 1%;
-	overflow: hidden;
-	z-index: 999; 
-    width: 64px;
-    height: 64px;
-	border: none;
-	text-indent: 100%;
-	background: url("assets/images/arrow-up.png") no-repeat 0px 0px;
+#myBtn {
+  display: none;
+  position: fixed;
+  bottom: 24px;
+  right: 1%;
+  z-index: 999; 
+  width: 64px;
+  height: 64px;
+  border: none;
+  text-indent: 100%;
+  outline: none;
+  border-radius: 4px;
+  overflow-y: hidden;
+  left: 30px;
+  background: url("../images/arrow-up.png") no-repeat 0px 0px;
 }
-#toTopHover {
-    width: 64px;
+
+#myBtn:hover {
+   display: inline-block;
+   width: 64px;
     height: 64px;
 	display: block;
 	overflow: hidden;
 	float: right;
-	opacity: 0;
-	-moz-opacity: 0;
-	filter: alpha(opacity=0);
-	
 	
 }
 /*-- //bottom-to-top --*/
