--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -18,6 +18,12 @@
   .hero .slide-content h1 {
     margin: 100px 0 50px 0;
   }
+  
+  .fb-page {
+	width: 260px;
+	margin-left: 10%;
+	position: relative;
+  }
 }
 
 @media (max-width: 420px) {
@@ -36,6 +42,12 @@
   
   .hero .slide-content h1 {
     margin: 100px 0 35px 0;
+  }
+  
+  .fb-page {
+	width: 260px;
+	margin-left: 10%;
+	position: relative;
   }
 }
 
@@ -67,6 +79,12 @@
     width: 260px;
 	height: 42px;
 	display: inline;
+	position: relative;
+  }
+  
+  .fb-page {
+	width: 260px;
+	margin-left: 10%;
 	position: relative;
   }
 }
@@ -282,6 +300,12 @@
   background-color: #fff;
 }
 
+.fb-page {
+	width: 260px;
+	margin-left: -12px;
+	position: relative;
+  }
+
 }
 
 /*-----------------------------------
@@ -312,5 +336,11 @@
 	display: inline-block;
 	position: relative;
   } 
+  
+  .fb-page {
+	width: 260px;
+	margin-left: -12px;
+	position: relative;
+  }
   
 }
