--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -240,8 +240,9 @@ background-attachment: fixed;
 
 .hero .slide-content p {
   color: #170936;
-  font-size: 17px;
+  font-size: 20px;
   font-weight: bold;
+  font-family: "Rajdhani", sans-serif;
   -webkit-transform: matrix(0.93128, 0, 0, 0.93128, 0, 0);
           transform: matrix(0.93128, 0, 0, 0.93128, 0, 0);
   padding: 35px 0 35px 30px;
