--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,32 +25,18 @@
     1 - Header
 ------------------------------------*/
 /*-- bottom-to-top --*/
-#myBtn {
-  display: none;
+.scroll-to-top {
+  margin-left: 30px;
+  left: 0;
+  bottom: 10px;
   position: fixed;
-  bottom: 0%;
-  right: 1%;
-  z-index: 999; 
-  width: 64px;
-  height: 64px;
-  border: none;
-  text-indent: 100%;
-  outline: none;
-  border-radius: 4px;
-  overflow-y: hidden;
-  left: 30px;
-  background: url("../images/arrow-up.png") no-repeat 0px 0px;
+  z-index: 1000;
+  color: #ee1515;
+  font-family: Crimson Text, Open Sans;
+  animation-duration: 2s;
+  font-size: 300%;
 }
 
-#myBtn:hover {
-   display: inline-block;
-   width: 64px;
-    height: 64px;
-	display: block;
-	overflow: hidden;
-	float: right;
-	
-}
 /*-- //bottom-to-top --*/
 
 .fb-page {
@@ -66,8 +52,8 @@ header {
   background-color: rgba(26, 10, 56, 0.53);
   color: #fff;
   z-index: 1000;
+ }
   
-}
 
 header a {
   color: #fff;
@@ -78,9 +64,10 @@ header::after {
   width: 100%;
   height: 2px;
   background-color: rgba(255, 255, 255, 0.02);
-  position: absolute;
+  position: fixed;
   left: 0;
   bottom: -20px;
+  position: fixed;
 }
 
 .nav-link {
