--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -19,7 +19,6 @@
     margin: 100px 0 50px 0;
   }
   
-  
 }
 
 @media (max-width: 420px) {
@@ -40,9 +39,6 @@
     margin: 100px 0 35px 0;
   }
   
-  .fb-page {
-	
-  }
 }
 
 @media (min-width: 576px) {
@@ -75,10 +71,9 @@
 	display: inline;
 	position: relative;
   }
-  
-  .fb-page {
-	
-  }
+  .navbar-brand {
+	  
+	  
 }
 
 /*-----------------------------------
@@ -292,9 +287,6 @@
   background-color: #fff;
 }
 
-.fb-page {
-	
-  }
 
 }
 
@@ -327,8 +319,5 @@
 	position: relative;
   } 
   
-  .fb-page {
-
-  }
   
 }
